--- a/config/settings.yml
+++ b/config/settings.yml
@@ -36,7 +36,7 @@ settings:
     # 数据库类型 mysql，sqlite3， postgres
     driver: mysql
     # 数据库连接字符串 mysql 缺省信息 charset=utf8&parseTime=True&loc=Local&timeout=1000ms
-    source: root:Dreamfuture88@tcp(127.0.0.1:3306)/fyi?charset=utf8&parseTime=True&loc=Local&timeout=1000ms
+    source: root:xxx@tcp(127.0.0.1:3306)/fyi?charset=utf8&parseTime=True&loc=Local&timeout=1000ms
   gen:
     # 代码生成读取的数据库名称
     dbname: fyi
